# Cian

./: .env.example  .gitignore  README.md  change_2.md  main.py  photos.dvc  pyproject.toml  results.json  snapshot.py  viewer.py
.dvc/: config
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
changes/: change_1.md  change_3.md  change_4.md  change_5.md  change_6.md  change_7.md  change_8.md  change_9.md
data/: cian.sql.gz.dvc  exporter.py
data/ml/: catboost_dataset.parquet  kaggle_dataset.parquet  luxury_scores.csv  luxury_scores.parquet  predictions.csv
data/warehouse/: offers_luxury.csv  offers_luxury.parquet
db/: db.py  models.py
dumps/: get_dump.py
ml/: catboost_model.py  clip-vit-large.ipynb  luxury_prompt.py  mistral_client.py  process_luxury.py
models/: catboost_price.cbm
parser/: extract.py  listing.py  offer.py  photos.py  state.py
